--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -387,7 +387,6 @@
 
 </html>
 -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -467,83 +466,62 @@
         }
     </style>
     <link href="/css/style.css" rel="stylesheet">
-     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="flex flex-col h-dvh bg-gray-200">
     <%- include('partials/header') %>
-        <div class="fixed videoblock hidden z-[222] w-full h-svh">
-            <div id="videos">
-                <video class="video-player" id="localVideo" autoplay muted playsinline></video>
-                <video class="video-player" id="remoteVideo" autoplay playsinline></video>
+    <div class="fixed videoblock hidden z-[222] w-full h-svh">
+        <div id="videos">
+            <video class="video-player" id="localVideo" autoplay muted playsinline></video>
+            <video class="video-player" id="remoteVideo" autoplay playsinline></video>
+        </div>
+        <div id="controls">
+            <div class="control-container" id="cameraButton">
+                <svg width="21" height="14" viewBox="0 0 21 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M20.525 2.149C20.365 2.05 20.183 2 20 2C19.847 2 19.694 2.035 19.553 2.105L17 3.382V3C17 1.346 15.654 0 14 0H3C1.346 0 0 1.346 0 3V11C0 12.654 1.346 14 3 14H14C15.654 14 17 12.654 17 11V10.618L19.553 11.894C19.694 11.965 19.847 12 20 12C20.183 12 20.365 11.95 20.525 11.851C20.82 11.668 21 11.347 21 11V3C21 2.653 20.82 2.332 20.525 2.149ZM5 8.5C4.171 8.5 3.5 7.829 3.5 7C3.5 6.171 4.171 5.5 5 5.5C5.829 5.5 6.5 6.171 6.5 7C6.5 7.829 5.829 8.5 5 8.5Z" fill="white" />
+                </svg>
             </div>
-            <div id="controls">
-                <div class="control-container" id="cameraButton">
-                    <svg width="21" height="14" viewBox="0 0 21 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M20.525 2.149C20.365 2.05 20.183 2 20 2C19.847 2 19.694 2.035 19.553 2.105L17 3.382V3C17 1.346 15.654 0 14 0H3C1.346 0 0 1.346 0 3V11C0 12.654 1.346 14 3 14H14C15.654 14 17 12.654 17 11V10.618L19.553 11.894C19.694 11.965 19.847 12 20 12C20.183 12 20.365 11.95 20.525 11.851C20.82 11.668 21 11.347 21 11V3C21 2.653 20.82 2.332 20.525 2.149ZM5 8.5C4.171 8.5 3.5 7.829 3.5 7C3.5 6.171 4.171 5.5 5 5.5C5.829 5.5 6.5 6.171 6.5 7C6.5 7.829 5.829 8.5 5 8.5Z"
-                            fill="white" />
-                    </svg>
-                </div>
-
-                <div class="control-container" id="hangup">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path d="M0 0h24v24H0z" fill="red" />
-                        <path
-                            d="M20 15.5c-.78 0-1.55-.3-2.12-.88l-1.43-1.42a4.007 4.007 0 0 0-5.54 0l-1.43 1.42A2.983 2.983 0 0 1 4 15.5c-.78 0-1.55-.3-2.12-.88A2.983 2.983 0 0 1 1 12.5a2.983 2.983 0 0 1 .88-2.12l7-7a4.007 4.007 0 0 1 5.54 0l7 7c.58.58.88 1.34.88 2.12s-.3 1.55-.88 2.12c-.58.58-1.34.88-2.12.88z" />
-                    </svg>
-                </div>
-
-                <div class="control-container" id="micButton">
-                    <svg width="20" height="20" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                            d="M7 12.5C8.7 12.5 10 11.2 10 9.5V3.5C10 1.8 8.7 0.5 7 0.5C5.3 0.5 4 1.8 4 3.5V9.5C4 11.2 5.3 12.5 7 12.5ZM12.3 9.5C12.3 12.5 9.8 14.6 7 14.6C4.2 14.6 1.7 12.5 1.7 9.5H0C0 12.9 2.7 15.7 6 16.2V19.5H8V16.2C11.3 15.7 14 12.9 14 9.5H12.3Z"
-                            fill="white" />
-                    </svg>
-                </div>
+            <div class="control-container" id="hangup">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M0 0h24v24H0z" fill="red" />
+                    <path d="M20 15.5c-.78 0-1.55-.3-2.12-.88l-1.43-1.42a4.007 4.007 0 0 0-5.54 0l-1.43 1.42A2.983 2.983 0 0 1 4 15.5c-.78 0-1.55-.3-2.12-.88A2.983 2.983 0 0 1 1 12.5a2.983 2.983 0 0 1 .88-2.12l7-7a4.007 4.007 0 0 1 5.54 0l7 7c.58.58.88 1.34.88 2.12s-.3 1.55-.88 2.12c-.58.58-1.34.88-2.12.88z" />
+                </svg>
+            </div>
+            <div class="control-container" id="micButton">
+                <svg width="20" height="20" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M7 12.5C8.7 12.5 10 11.2 10 9.5V3.5C10 1.8 8.7 0.5 7 0.5C5.3 0.5 4 1.8 4 3.5V9.5C4 11.2 5.3 12.5 7 12.5ZM12.3 9.5C12.3 12.5 9.8 14.6 7 14.6C4.2 14.6 1.7 12.5 1.7 9.5H0C0 12.9 2.7 15.7 6 16.2V19.5H8V16.2C11.3 15.7 14 12.9 14 9.5H12.3Z" fill="white" />
+                </svg>
             </div>
         </div>
-        <div id="incoming-call"
-            class="fixed hidden z-[222] w-full h-dvh bg-gray-900 bg-opacity-75 flex items-center justify-center">
-            <div class="bg-white p-8 rounded-md text-center">
-                <p class="mb-4">Incoming Call...</p>
-                <button id="accept-call" class="bg-green-500 text-white py-2 px-4 rounded-md">Accept</button>
-                <button id="reject-call" class="bg-red-500 text-white py-2 px-4 rounded-md ml-2">Reject</button>
-            </div>
+    </div>
+    <div id="incoming-call" class="fixed hidden z-[222] w-full h-dvh bg-gray-900 bg-opacity-75 flex items-center justify-center">
+        <div class="bg-white p-8 rounded-md text-center">
+            <p class="mb-4">Incoming Call...</p>
+            <button id="accept-call" class="bg-green-500 text-white py-2 px-4 rounded-md">Accept</button>
+            <button id="reject-call" class="bg-red-500 text-white py-2 px-4 rounded-md ml-2">Reject</button>
         </div>
-        <main class="flex-1 p-4 overflow-y-auto relative" id="message-container">
-            <div
-                class="text-zinc-400 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-2/3 text-center nobody">
-                bhagwaan kasam koi nahi hai yaha, ruko shaayad koi
-                aajaye.</div>
-        </main>
-        <form id="chatform" class="bg-white p-4 flex">
-            <input type="hidden" id="userid" value="">
-            <input type="text" id="messagebox"
-                class="flex-1 border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-                placeholder="Type a message">
-            <button type="submit"
-                class="ml-2 bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700">Send</button>
-        </form>
-        <video id="local-video" class="hidden" autoplay></video>
-        <video id="remote-video" class="hidden" autoplay></video>
+    </div>
+    <main class="flex-1 p-4 overflow-y-auto relative" id="message-container">
+        <div class="text-zinc-400 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-2/3 text-center nobody">
+            bhagwaan kasam koi nahi hai yaha, ruko shaayad koi aajaye.
+        </div>
+    </main>
+    <form id="chatform" class="bg-white p-4 flex">
+        <input type="hidden" id="userid" value="">
+        <input type="text" id="messagebox" class="flex-1 border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" placeholder="Type a message">
+        <button type="submit" class="ml-2 bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700">Send</button>
+    </form>
+    <video id="local-video" class="hidden" autoplay></video>
+    <video id="remote-video" class="hidden" autoplay></video>
 
-        <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"
-            integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO"
-            crossorigin="anonymous"></script>
-            <script>
-            const socket = io();
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script> <script>
+          const socket = io();
             const chatform = document.querySelector("#chatform");
             const messagebox = document.querySelector("#messagebox");
             const messagecontainer = document.querySelector("#message-container");
 
             let room;
-
-            document.querySelector('#micButton').addEventListener('click', toggleAudio);
-            document.querySelector('#cameraButton').addEventListener('click', toggleVideo);
-
-
-
 
             socket.emit("joinroom");
 
@@ -599,6 +577,7 @@
                 document.getElementById('message-container').appendChild(messageContainer);
                 document.querySelector("#message-container").scrollTop = document.querySelector("#message-container").scrollHeight;
             }
+
             // WEBRTC START
             let localStream;
             let remoteStream;
@@ -684,6 +663,7 @@
                     console.log("connection state change hui ", peerConnection.connectionState);
                 }
             }
+
             const handleSignalingMessage = async (message) => {
                 const { type, offer, answer, candidate } = JSON.parse(message);
                 if (type === "offer") handleOffer(offer);
@@ -760,7 +740,8 @@
                 .addEventListener("click", function () {
                     hangup();
                 })
-                function hangup() {
+
+            function hangup() {
                 if (peerConnection) {
                     peerConnection.close();
                     peerConnection = null;
@@ -771,23 +752,9 @@
                     inCall = false;
                 }
             }
-            function toggleAudio() {
-                const audioTracks = localStream.getAudioTracks();
-                if (audioTracks.length > 0) {
-                    const isEnabled = audioTracks[0].enabled;
-                    audioTracks[0].enabled = !isEnabled;
-                    document.querySelector('#micButton').classList.toggle('muted', isEnabled);
-                }
-            }
+        </script>
 
-            function toggleVideo() {
-                const videoTracks = localStream.getVideoTracks();
-                if (videoTracks.length > 0) {
-                    const isEnabled = videoTracks[0].enabled;
-                    videoTracks[0].enabled = !isEnabled;
-                    document.querySelector('#cameraButton').classList.toggle('stopped', isEnabled);
-                }
-            }
-            </script>
-            </body>
-            </html>
+</body>
+
+</html>
+
