--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <body class="flex items-center justify-center h-screen bg-gray-200">
   <div class="bg-white flex items-center flex-col p-8 rounded-lg shadow-md w-full max-w-xs">
     <h1 class="text-2xl font-bold mb-4 text-center">Welcome to LiveChat...</h1>
-    <a href="/chat2" class="w-full text-center bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700">Start
+    <a href="/chating" class="w-full text-center bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700">Start
       Chat</a>
   </div>
 </body>
